# duckduckgo-mcp

./: .env.example  Dockerfile  README.md  pyproject.toml  server.py
src/duckduckgo/: fetcher.py
src/llm/: client.py  prompts.py
